@startuml DeleteTaskClassDiagram

hide circle
skinparam classAttributeIconSize 0

class ModuleSync {
	+run(): void
}

class Parser {
	+parse(input: String): Command
	-parseDelete(input: String): Command
}

abstract class Command {
	+execute(moduleBook: ModuleBook, storage: Storage, ui: Ui): void
}

class DeleteCommand {
	-displayIndex: int
	+DeleteCommand(displayIndex: int)
	+execute(moduleBook: ModuleBook, storage: Storage, ui: Ui): void
}

class ModuleBook {
	+removeTaskByDisplayIndex(displayIndex: int): Task
	+countTotalTasks(): int
}

class Module {
	+getCode(): String
	+getTasks(): TaskList
}

class TaskList {
	+removeTask(index: int): Task
	+size(): int
}

class Task {
	+getModuleCode(): String
	+formatForList(taskNumber: int): String
}

class Storage {
	+save(moduleBook: ModuleBook): void
}

class Ui {
	+showTaskDeleted(task: Task, totalTasks: int): void
}

ModuleSync --> Ui
ModuleSync --> Parser
ModuleSync --> ModuleBook
ModuleSync --> Storage
ModuleSync --> Command : executes

Parser ..> DeleteCommand : creates
DeleteCommand --|> Command
DeleteCommand --> ModuleBook : removeTaskByDisplayIndex(...)
DeleteCommand --> Storage : save(...)
DeleteCommand --> Ui : showTaskDeleted(...)

ModuleBook "1" o-- "*" Module
Module "1" o-- "1" TaskList
TaskList "1" o-- "*" Task

@enduml
